# alpha-terminal

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  HANDOFF.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  railway.toml  start-backend.bat
.claude/: settings.json
.claude/agents/: architect.md  explorer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  prescan-cron.yml
app/: README.md  run.bat  run.sh
app/backend/: auth.py  context.py  crypto.py  main.py  middleware.py
app/backend/alembic/: env.py
app/backend/database/: __init__.py  app_models.py  connection.py  models.py
app/backend/models/: schemas.py
app/backend/repositories/: access_request_repository.py  api_key_repository.py  flow_repository.py  pnl_repository.py  portfolio_repository.py  portfolio_settings_repository.py  scan_repository.py  schedule_repository.py  snaptrade_connection_repository.py  thesis_repository.py  watchlist_repository.py
app/frontend/: index.html  package-lock.json  package.json
docker/: Dockerfile.web
docs/: FIDELITY_INTEGRATION.md  roadmap.md
scripts/: cred_check.py  release.sh  smoke_test_nvda.py
src/: main.py  run_morning_scan.py
src/agents/: alpha_seeker.py  aswath_damodaran.py  emerging_tech.py  energy_transition.py  growth_agent.py  mohnish_pabrai.py  news_sentiment.py  phil_fisher.py  portfolio_manager.py  rakesh_jhunjhunwala.py  stanley_druckenmiller.py  valuation.py  warren_buffett.py
src/backtesting/: cli.py  controller.py  options_historical.py  options_proxy.py  output.py  pattern_backtest.py  pattern_options.py  sleeve_attribution.py  trade_stats.py  types.py
src/cli/: input.py
src/config/: __init__.py  portfolio_config.py  watchlist.py
src/llm/: api_models.json  models.py
src/patterns/: __init__.py  patterns.py  trade_plan.py
src/tools/: api.py  key_context.py
src/utils/: analysts.py  llm.py  llm_router.py  ollama.py  progress.py
tests/: test_access_requests.py  test_agent_chat.py  test_api_rate_limiting.py  test_auth.py  test_backtest_engine.py  test_byok_storage.py  test_cache.py  test_chat_news_trigger.py  test_contract_recommender.py  test_custom_agents.py  test_db_repositories.py  test_fidelity_import.py  test_finnhub_client.py  test_finnhub_converters.py  test_forming_signal.py  test_internal_cron.py  test_key_resolver.py  test_massive_converters.py  test_morning_scan.py  test_news_categorization.py  test_options_backtest_exit.py  test_paper_account.py  test_pattern_options.py  test_pnl_service.py  test_portfolio_classify.py  test_portfolio_config.py  test_portfolio_overview.py  test_portfolio_stats.py  test_progress_scope.py  test_provisioning.py  test_robinhood_mcp.py  test_run_now.py  test_signal_context.py  test_sleeve_attribution.py  test_snaptrade_client.py  test_snaptrade_connection_service.py  test_snaptrade_routes.py  test_snaptrade_service.py  test_storage_cutover.py  test_storage_security.py  (+6 more)
tests/backtesting/: test_portfolio.py
v2/event_study/: __main__.py
(+225 files in other folders)
