# Poetry package metadata. The poetry "name" field is kept as the legacy
# upstream value so existing virtualenvs continue to resolve; the public
# brand is "Alpha Terminal" (see README.md, LICENSE).
[tool.poetry]
name = "ai-hedge-fund"
version = "1.21.0"
description = "Alpha Terminal — retail-investor research terminal. AI agent panels score your book, a realistic options backtester checks your strategies, and a market-news + earnings-call desk keeps you current."
authors = ["Ronit Ganguly <ganguly.ronit@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
    { include = "v2", from = "." },
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langchain-anthropic = "0.3.5"
langchain-groq = "0.2.3"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
langchain-ollama = "0.3.6"
langgraph = "0.2.56"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^13.9.4"
langchain-google-genai = "^2.0.11"
# Backend dependencies
fastapi = {extras = ["standard"], version = "^0.104.0"}
fastapi-cli = "^0.0.7"
pydantic = "^2.4.2"
httpx = "^0.27.0"
requests = "^2.31"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
langchain-gigachat = "^0.3.12"
langchain-xai = "^0.2.5"
scipy = "^1.11.0"
pypdf = "^6.12.2"
beautifulsoup4 = "^4.14.3"
python-multipart = "^0.0.30"
psycopg2-binary = "^2.9"
pyjwt = {version = "^2.9.0", extras = ["crypto"]}
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^7.3.0"
ruff = "^0.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501: this repo's existing formatter convention is `[tool.black] line-length = 420`
#   (see above) — the codebase was never wrapped to 120 cols, so enforcing E501 here
#   would require a repo-wide reformat, which is out of scope for this change.
# E402: several modules intentionally do sys.path/dotenv setup before imports.
# I001: existing imports were never run through an isort pass matching this profile;
#   enforcing it would mean reordering imports across ~100+ files, also out of scope.
# Revisit these once a dedicated formatting pass is scheduled.
ignore = ["E501", "E402", "I001"]

[tool.poetry.scripts]
backtester = "src.backtesting.cli:main"

[tool.pytest.ini_options]
# Put the project root on sys.path so tests can `import src...` without a
# conftest hack. Limit collection to tests we maintain — upstream's
# v2/event_study has a separately-pathed test file that pytest would
# otherwise scoop up.
pythonpath = ["."]
testpaths = ["tests"]